Final version being uploaded to git

--- a/index.html
+++ b/index.html
@@ -2,13 +2,38 @@
 <html>
     <head>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.css"/>
         <title>My first web page</title>
     </head>
     <body>
-        <h1>Francisco Quintana</h1>
-        <p>This is an example...</p>
+        <h1 class="colorChange">Francisco Quintana</h1>
+        <p class="first">This is an example...</p>
         <p>This is a francisco example</p>
         <p>Is this live</p>
         <p>I am at Journocoders</p>
+        <a href="http://www.theguardian.com/">The Guardian</a>
+        <img src="https://media.giphy.com/media/3Z0XdseX163wQ/giphy.gif"/>
+        <strong>This text is bold.</strong>
+        <em>This text is italic.</em>
+        <ul>
+		    <li>One thing</li>
+		    <li>Another one</li>
+		</ul>
+		<ol>
+		    <li>First thing</li>
+		    <li>Second thing</li>
+		</ol>
+
+		<div>
+				Some content
+				<span>Something important</span>
+		</div>
+
+
+		<div class="contact">
+		    <a class="social fa fa-envelope" href="mailto:test@example.com"></a>
+		    <a class="social fa fa-twitter" href="https://twitter.com/journocoders"></a>
+		</div>
+
     </body>
 </html>
